# Botanica

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
Application/: CMakeLists.txt
Application/src/: Application.cpp  Application.h  Core.h  EntryPoint.cpp  Log.cpp  Log.h  Window.h  btpch.h
Application/src/Events/: ApplicationEvent.h  Event.h  KeyboardEvent.h
Application/src/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
docs/: .gitignore  soc.bib  soc.fdb_latexmk  soc.fls  soc.tex
docs/prilohy/: manual.odt
docs/prilohy/Botanica-master/: .gitignore  README.md
docs/prilohy/Botanica-master/src/: Application.h  Log.cpp  Timestep.h  Window.h  pch.h
docs/prilohy/Botanica-master/src/Components/: Camera.h
docs/prilohy/Botanica-master/src/Event/: MouseEvent.h
docs/prilohy/Botanica-master/src/Layers/: CameraController.h
docs/prilohy/Botanica-master/src/Renderer/: VertexArray.cpp  VertexArray.h
docs/prilohy/Botanica-master/src/shaders/: WorldBoundsVert.glsl
docs/svg-inkscape/: alive_cell_svg-tex.pdf_tex  dead_cell_svg-tex.pdf_tex
scripts/: embed_shaders.py
shaders/: Test.frag  Test.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.h  EntryPoint.cpp  Input.cpp  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Platform.cpp  Platform.h  Player.cpp  Player.h  TestLayer.cpp  TestLayer.h  Timestep.h  Utils.h  Window.cpp  Window.h  btpch.h  main.cpp
src/App/: CameraController.cpp  CameraController.h  MainLayer.cpp  MainLayer.h  World.cpp  World.h
src/Components/: Camera.h  Plant.cpp  Plant.h  Transform.h  Vector2D.h  Vector3D.h  World.h
src/Core/: Application.cpp  Application.h  EntryPoint.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Platform.h  RenderLayer.cpp  RenderLayer.h  Timestep.h  Transform.h  Window.h  cpch.h
src/Core/Event/: Event.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
src/Core/Platform/CrossPlatform/: CrossPlatformInput.cpp  CrossPlatformInput.h  CrossPlatformPlatform.cpp  CrossPlatformWindow.cpp  CrossPlatformWindow.h
src/Core/Platform/Linux/: LinuxWindow.cpp
src/Core/Platform/OpenGL/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  Context.cpp  Context.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
src/Core/Renderer/: Buffer.h  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.h  VertexArray.h
src/ECS/: System.h
src/Event/: Event.h  KeyboardEvent.h  WindowEvent.h
src/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
src/Layers/: CameraController.cpp  CameraController.h  FFunctions.h  Fclasses.h  Ffunctions.h  RenderingLayer.cpp  RenderingLayer.h  SimulationLayer.cpp  SimulationLayer.h
src/Platform/GLFW/: GLFWWindow.cpp
src/Renderer/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h
src/shaders/: Fragment.glsl  Shaders.h  Vertex.glsl  VoxelFrag.glsl  VoxelGen.glsl  VoxelVert.glsl  WorldBoundsFrag.glsl
